  ConnectionInfo renamed to ConnectionRequest
  ServerUtil.JAVAX_NET_TRUSTSTORE configuration constant moved to Server
  ServerUtil renamed to Servers and ClientUtil renamed to Clients
  org.jminor.common.model.reports package moved to org.jminor.common.db
  ExceptionUtil, DateFormats and ProgressReporter moved to common core
  TimeUtil split from DateUtil due to java.sql dependencies
  Module dependencies modified according to the above
  Common module broken up into submodules
  Framework module broken up into submodules
  Swing module broken up into submodules
  Cleanup after breakup
  Automatic-Module-Name attribute added to jar manifests
  Swing client bundle module fixed
  Swing client-* module directories renamed to framework-*
  Swing client-* modules renamed to framework-*
  Swing framwork-test module directory renamed to framwork-ui-test
  Swing framework-test module renamed to framework-ui-test
  EntityTestUnit moved into org.jminor.framework.domain.testing
  EntityApplicationPanelTestUnit and EntityEditPanelTestUnit moved into org.jminor.swing.framework.ui.testing
  Ant build jdeps target added
  REST plugin uses Base64 instead of DatatypeConverter
  Server module tests no longer depend on framework-db-remote module
  Databases.isDatabaseTypeSpecified() moved to Database
  EntityGeneratorModel and EntityGeneratorPanel moved to swing.framwork.model and ui respectively
  IntelliJ modules synced with ivy dependencies
  Logback dependencies cleaned up
  EntityConditions.propertyCondition() now throws a more descriptive error when called with a foreign key property parameter
  EntityConditions.DefaultEntityCondition bug fixed, getValues() and getColumns() now return empty list instead of null when no property condition is available
  Resources moved to standard src/main/resources directory
  DefaultEntityConnectionServer now extends AbstractServer<AbstractRemoteEntityConnection, EntityConnectionServerAdmin>
  Some javadoc improvements